--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="js/globals.js"></script>
-  <script src="js/main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
   <link rel="stylesheet" href="css/board.css">
 </head>
 
