--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chess</title>
+    <link rel="stylesheet" href="css/board.css" />
+    <script src="js/globals.js"></script>
+    <script src="main.js" type="module"></script>
+    <script src="js/ui/header.js" type="module"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="js/globals.js"></script>
-  <script src="main.js" type="module"></script>
-  <link rel="stylesheet" href="css/board.css">
-</head>
-
-<body>
-  <div>
-    <div id="app">
-      <div id="board" class="board"></div>
+  <body>
+    <div>
+      <div id="app">
+        <header id="header">
+          <div class="inner">
+            <button id="flip-board">Flip</button>
+          </div>
+        </header>
+        <div id="board" class="board"></div>
+      </div>
     </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
