--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chess</title>
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/board.css" />
+    <link rel="stylesheet" href="css/dark-squares.css" />
     <script src="js/globals.js"></script>
     <script src="main.js" type="module"></script>
     <script src="js/ui/header.js" type="module"></script>
@@ -17,6 +19,7 @@
         <header id="header">
           <div class="inner">
             <button id="flip-board">Flip</button>
+            <button id="show-history">Show History</button>
           </div>
         </header>
         <div id="board" class="board"></div>
