--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,8 @@
         <header id="header">
           <div class="inner">
             <button id="flip-board">Flip</button>
-            <button id="show-history">Show History</button>
+            <button id="show-moves-history">Moves History</button>
+            <button id="show-board-history">Board History</button>
           </div>
         </header>
         <div id="board" class="board"></div>
