--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chess</title>
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/board.css" />
-    <link rel="stylesheet" href="css/dark-squares.css" />
-    <script src="js/globals.js"></script>
-    <script src="main.js" type="module"></script>
-    <script src="js/ui/header.js" type="module"></script>
-  </head>
 
-  <body>
-    <div>
-      <div id="app">
-        <header id="header">
-          <div class="inner">
-            <button id="flip-board">Flip</button>
-            <button id="show-moves-history">Moves History</button>
-            <button id="show-board-history">Board History</button>
-          </div>
-        </header>
-        <div id="board" class="board"></div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chess</title>
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/board.css" />
+  <link rel="stylesheet" href="css/dark-squares.css" />
+  <script src="js/globals.js"></script>
+  <script src="main.js" type="module"></script>
+  <script src="js/ui/header.js" type="module"></script>
+</head>
+
+<body>
+  <div>
+    <div id="app">
+      <header id="header">
+        <div class="inner">
+          <button id="show-board">Board</button>
+          <button id="show-pieces">Pieces</button>
+          <button id="show-moves-history">Moves History</button>
+          <button id="show-board-history">Board History</button>
+          <button id="flip-board">Flip</button>
+        </div>
+      </header>
+      <div id="board" class="board"></div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
