mark last move on the board

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>Chess</title>
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/board.css" />
-  <link rel="stylesheet" href="css/dark-squares.css" />
+  <link rel="stylesheet" href="css/squares.css" />
   <script src="js/globals.js"></script>
   <script src="main.js" type="module"></script>
   <script src="js/ui/header.js" type="module"></script>
