refactor backend, use pointers everywhere :D

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
     <script src="js/globals.js"></script>
     <script src="js/ui/footer-UI.js" type="module"></script>
-    <script src="main.js" type="module" defer></script>
+    <script src="app.js" type="module" defer></script>
   </head>
 
   <body>
