--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/board.css" />
     <link rel="stylesheet" href="css/squares.css" />
 
-    <script src="../build/js/globals.js"></script>
-    <script src="../build/js/ui/footer-UI.js" type="module"></script>
+    <script src="../build/js/globals.js" defer></script>
+    <script src="../build/js/ui/footer-UI.js" type="module" defer></script>
     <script src="../build/app.js" type="module" defer async></script>
   </head>
 
