--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,7 @@
 
     <script src="../build/js/globals.js" defer></script>
     <script src="../build/js/ui/footer-UI.js" type="module" defer></script>
-    <script src="../build/app.js" type="module" defer async></script>
+    <script src="../build/js/app.js" type="module" defer async></script>
   </head>
 
   <body>
