small fix; test-cache

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,23 +17,9 @@
   <link rel="stylesheet" href="css/squares.css" />
 
   <script src="../build/js/globals.js" defer></script>
-
   <script src="../build/js/ui/footer-UI.js" type="module" defer></script>
-  <!-- <script src="../build/js/ui/lobby-UI.js" type="module" defer></script>
-  <script src="../build/js/ui/modal.js" type="module" defer></script>
-
-  <script src="../build/js/ws/ws.js" type="module" defer></script>
-
-  <script src="../build/js/utils/utils.js" type="module" defer></script>
-
-  <script src="../build/js/engine/board.js" type="module" defer></script>
-  <script src="../build/js/engine/computePieceMovements.js" type="module" defer></script>
-  <script src="../build/js/engine/filterLegalMoves.js" type="module" defer></script>
-  <script src="../build/js/engine/gameState.js" type="module" defer></script>
-  <script src="../build/js/engine/initGame.js" type="module" defer></script>
-  <script src="../build/js/engine/piecesLib.js" type="module" defer></script> -->
-
   <script src="../build/js/app.js" type="module" defer></script>
+  <script src="../test-cache/cache" type="module" defer></script>
 </head>
 
 <body>
