--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,9 +17,9 @@
   <link rel="stylesheet" href="css/board.css" />
   <link rel="stylesheet" href="css/squares.css" />
 
-  <script src="../build/js/globals.js" defer></script>
-  <script src="../build/js/ui/footer-UI.js" type="module" defer></script>
-  <script src="../build/js/app.js" type="module" defer></script>
+  <script src="js-build/globals.js" defer></script>
+  <script src="js-build/ui/footer-UI.js" type="module" defer></script>
+  <script src="js-build/app.js" type="module" defer></script>
 </head>
 
 <body>
