--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,75 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chess</title>
 
-  <title>Chess</title>
+    <link rel="stylesheet" href="css/variables.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/utils.css" />
+    <link rel="stylesheet" href="css/modal.css" />
+    <link rel="stylesheet" href="css/header-footer.css" />
+    <link rel="stylesheet" href="css/lobby.css" />
+    <link rel="stylesheet" href="css/board.css" />
+    <link rel="stylesheet" href="css/squares.css" />
 
-  <link rel="stylesheet" href="css/variables.css" />
-  <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="css/utils.css" />
-  <link rel="stylesheet" href="css/modal.css" />
-  <link rel="stylesheet" href="css/header-footer.css" />
-  <link rel="stylesheet" href="css/lobby.css" />
-  <link rel="stylesheet" href="css/board.css" />
-  <link rel="stylesheet" href="css/squares.css" />
+    <script src="js-build/globals.js" defer></script>
+    <script src="js-build/ui/footer-UI.js" type="module" defer></script>
+    <script src="js-build/app.js" type="module" defer></script>
+  </head>
 
-  <script src="js-build/globals.js" defer></script>
-  <script src="js-build/ui/footer-UI.js" type="module" defer></script>
-  <script src="js-build/app.js" type="module" defer></script>
-</head>
-
-<body>
-  <div id="app">
-    <main>
-      <div class="center-container">
-        <div class="connection-details">
-          <div id="client-id">Offline</div>
-          <div id="room-id"></div>
-        </div>
-
-        <div class="lobby-buttons display-none">
-          <button id="single-player-btn">Single Player</button>
-          <button id="find-game-btn">Find Game</button>
-        </div>
-
-        <div id="board" class="board display-none"></div>
-
-        <footer id="footer" class="display-none">
-          <div class="inner">
-            <div id="debug" class="display-none">
-              <button id="show-state">State</button>
-              <button id="show-board">Board</button>
-              <button id="show-pieces">Pieces</button>
-              <button id="show-moves-history">Moves History</button>
-              <button id="show-board-history">Board History</button>
-            </div>
-            <button id="flip-board">Flip Board</button>
-            <button id="leave">Leave</button>
+  <body>
+    <div id="app">
+      <main>
+        <div class="center-container">
+          <div class="connection-details">
+            <div id="client-id">Offline</div>
+            <div id="room-id"></div>
           </div>
-        </footer>
-      </div>
 
-      <div id="modal" class="display-none">
-        <div class="modal-close-button-container">
-          <span id="close-modal-btn"> &times; </span>
-        </div>
-        <div id="modal-content">
-          <!-- Dynamic content -->
-        </div>
-      </div>
-    </main>
+          <div class="lobby-buttons display-none">
+            <button id="single-player-btn">Single Player</button>
+            <button id="find-game-btn">Find Game</button>
+          </div>
 
-    <!-- Audio assets -->
-    <audio id="capture" src="audio-assets/capture.mp3"></audio>
+          <div id="board" class="board display-none"></div>
+
+          <footer id="footer" class="display-none">
+            <div class="inner">
+              <div id="debug" class="display-none">
+                <button id="show-state">State</button>
+                <button id="show-board">Board</button>
+                <button id="show-pieces">Pieces</button>
+                <button id="show-moves-history">Moves History</button>
+                <button id="show-board-history">Board History</button>
+              </div>
+              <button id="flip-board">Flip Board</button>
+              <button id="leave">Leave</button>
+            </div>
+          </footer>
+        </div>
+
+        <div id="modal" class="display-none">
+          <div class="modal-close-button-container">
+            <span id="close-modal-btn"> &times; </span>
+          </div>
+          <div id="modal-content">
+            <!-- Dynamic content -->
+          </div>
+        </div>
+      </main>
+
+      <!-- Audio assets -->
+      <!-- <audio id="capture" src="audio-assets/capture.mp3"></audio>
     <audio id="castle" src="audio-assets/castle.mp3"></audio>
     <audio id="check" src="audio-assets/check.mp3"></audio>
     <audio id="move-self" src="audio-assets/move-self.mp3"></audio>
-    <audio id="promote" src="audio-assets/promote.mp3"></audio>
-  </div>
-</body>
-
+    <audio id="promote" src="audio-assets/promote.mp3"></audio> -->
+    </div>
+  </body>
 </html>
