factor state out into its own files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/board.css" />
     <link rel="stylesheet" href="css/squares.css" />
 
-    <script src="js-build/globals.js" defer></script>
+    <script src="js-build/globals.js" type="module" defer></script>
     <script src="js-build/ui/footer-UI.js" type="module" defer></script>
     <script src="js-build/app.js" type="module" defer></script>
   </head>
