Add functionality to leave a (single player) game

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,11 +30,6 @@
             <div id="room-id"></div>
           </div>
 
-          <div class="lobby-buttons display-none">
-            <button id="single-player-btn">Single Player</button>
-            <button id="find-game-btn">Find Game</button>
-          </div>
-
           <div id="board" class="board display-none"></div>
 
           <footer id="footer" class="display-none">
@@ -47,7 +42,7 @@
                 <button id="show-board-history">Board History</button>
               </div>
               <button id="flip-board">Flip Board</button>
-              <button id="leave">Leave</button>
+              <button id="leave-game">Leave</button>
             </div>
           </footer>
         </div>
@@ -61,13 +56,6 @@
           </div>
         </div>
       </main>
-
-      <!-- Audio assets -->
-      <!-- <audio id="capture" src="audio-assets/capture.mp3"></audio>
-    <audio id="castle" src="audio-assets/castle.mp3"></audio>
-    <audio id="check" src="audio-assets/check.mp3"></audio>
-    <audio id="move-self" src="audio-assets/move-self.mp3"></audio>
-    <audio id="promote" src="audio-assets/promote.mp3"></audio> -->
     </div>
   </body>
 </html>
